# chatbot-eval

./: .env.example  .gitignore  README.md  black_box_chatbot_eval_sunum_2.pptx  pyproject.toml  pytest.ini  runner.py
data/: golden_multi_turn.json  golden_quillbot_multi_turn.json  golden_quillbot_single_turn.json  golden_single_turn.json
docs/: local-tooling.md  offline-python-wheelhouse.md
examples/: multi_turn_evaluation_input.json  single_turn_evaluation_input.json
java-automation/: pom.xml
java-automation/scripts/: mvn-java21.ps1
offline-python-wheelhouse/: chatbot_eval-0.1.0-py3-none-any.whl  deepeval-4.0.5-py3-none-any.whl  google_auth-2.56.0-py3-none-any.whl  opentelemetry_api-1.43.0-py3-none-any.whl  opentelemetry_sdk-1.43.0-py3-none-any.whl  opentelemetry_semantic_conventions-0.64b0-py3-none-any.whl  posthog-7.23.0-py3-none-any.whl  pytest_repeat-0.9.4-py3-none-any.whl  pytest_rerunfailures-16.4-py3-none-any.whl
scripts/: generate_quillbot_report.py
src/: __init__.py  chatbot_client.py  chatbot_multiturn_client.py  config.py  dataset.py  deepeval_runner.py  google_vertex_client.py  openrouter_errors.py
src/chatbot_eval/: __init__.py  __main__.py  cli.py  evaluator.py  golden_case_selector.py  metric_probe.py  metric_registry.py  metric_runner.py  multi_turn_evaluator.py  result_builder.py  single_turn_evaluator.py
src/metrics/: __init__.py  answer_correctness.py  answer_relevancy.py  google_genai_model.py  (+6 more)
tests/: __init__.py  test_cli_metric.py  test_deepeval_runner.py  test_golden_case_selector.py  test_multi_turn.py  test_single_turn.py
(+42 files in other folders)
