[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-eval"
version = "0.1.0"
description = "Black-box chatbot/RAG evaluation automation with DeepEval and GEval."
requires-python = "==3.12.3"
dependencies = [
    "deepeval==4.0.5",
    "google-auth>=2.35.0",
    "google-genai>=1.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "pytest>=8.2.0",
]

[project.optional-dependencies]
certs = [
    "pip-system-certs>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "chatbot_client",
    "chatbot_multiturn_client",
    "config",
    "dataset",
    "deepeval_runner",
    "google_vertex_client",
    "openrouter_errors",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chatbot_eval*", "metrics*"]

[tool.pytest.ini_options]
addopts = "-s --tb=short --disable-warnings"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Unverified HTTPS request.*:urllib3.exceptions.InsecureRequestWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"